# Solar-System-with-OpenGL

./: .gitignore  .gitmodules  README.md
build-tp_open_gl-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  qtcsettings.cmake  tp_open_gl
build-tp_open_gl-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-b75d872fd7413ef95cc3.json  cmakeFiles-v1-55cba5c3929ec9060c46.json  cmakeFiles-v1-95566159ed7f9aaaa7aa.json  codemodel-v2-1805f72cfa1d2f98986d.json  codemodel-v2-1d397fe75846d698cfc7.json  codemodel-v2-63dae97df6c171c67139.json  index-2023-10-21T16-10-59-0089.json  index-2023-11-09T08-45-44-0002.json  index-2023-11-13T14-37-01-0354.json  target-tp_open_gl-Debug-094d012fc23ee038feb1.json  target-tp_open_gl-Debug-32c166aab40be4769472.json  target-tp_open_gl-Debug-38e04f9f5898a1a7277e.json
build-tp_open_gl-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-1daf995ba770d164e467.json  codemodel-v2-d4f19b96bbb0c20cfb1e.json  index-2023-10-21T13-47-47-0021.json  target-tp_open_gl-Debug-bca1d71901346c1f91b2.json
tp_open_gl/: CMakeLists.txt  CMakeLists_windows.txt  OpenGL_API_V6.pro  camera.cpp  camera.h  controls.cpp  controls.h  fpscontrols.cpp  main.cpp  navigationcontrols.cpp  navigationcontrols.h  object.cpp  object.h  orbit.cpp  orbit.h  pointlight.cpp  pointlight.h  renderer.cpp  renderer.h  shader.cpp  shader.h  userinterface.cpp  userinterface.h  uvbuffer.cpp  vertexbuffer.h
tp_open_gl/imgui/backends/: imgui_impl_glfw.cpp
tp_open_gl/shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  SphereSimpleFragmentShader.fragmentshader  SphereSimpleVertexShader.vertexshader
